force-app/main/default/objects/General_Exam__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>General Exams</relationshipLabel>
    <relationshipName>General_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>