force-app/main/default/objects/General_Exam__c/fields/General_Exam__c.field-meta.xml
<CustomField>
    <fullName>General_Exam__c</fullName>
    <label>General  Exam</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>